--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -257,7 +257,7 @@ responsive
   .podcast-management-dashboard .podcast-list-area .podcast-card .podcast-details .date-episode div p{font-size: 12px; line-height: 15px; text-align: left;}  
   .podcast-management-dashboard .search-and-filter{display: flex; justify-content: space-between;}
   .podcast-management-dashboard .search-and-filter .search-area,
-  .podcast-management-dashboard .search-and-filter .filter-area{ display: flex;}
+  .podcast-management-dashboard .search-and-filter .filter-area .filterGroup{display: flex;}
   .podcast-management-dashboard .search-and-filter .filter-area .sselect { margin-left: 15px; width: auto; margin-right: 0; margin-top: 0;}
   .modal .modal-dialog {position: absolute; background: #fff; max-width: 700px; min-width: 500px;}
 }
